--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -56,7 +56,7 @@
       <plugin>
         <groupId>sonia.maven</groupId>
         <artifactId>appassembler-maven-plugin</artifactId>
-        <version>1.2.1.1-SNAPSHOT</version>
+        <version>1.2.2.0</version>
         <executions>
           <execution>
             <id>scm-app</id>
