--- a/scm-plugins/scm-svn-plugin/pom.xml
+++ b/scm-plugins/scm-svn-plugin/pom.xml
@@ -13,6 +13,7 @@
   <artifactId>scm-svn-plugin</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <name>scm-svn-plugin</name>
+  <packaging>smp</packaging>
   <url>https://bitbucket.org/sdorra/scm-manager</url>
   <description>Plugin for the version control system Subversion</description>
 
