--- a/scm-test/pom.xml
+++ b/scm-test/pom.xml
@@ -49,7 +49,7 @@
     <!-- jgit -->
 
     <dependency>
-      <groupId>org.eclipse.jgit</groupId>
+      <groupId>sonia.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
       <version>${jgit.version}</version>
     </dependency>
