added maven.scm-manager.org repository to pom of scm-client-impl

--- a/scm-clients/scm-client-impl/pom.xml
+++ b/scm-clients/scm-client-impl/pom.xml
@@ -103,6 +103,12 @@
       <name>Sonatype Release</name>
       <url>http://oss.sonatype.org/content/repositories/releases </url>
     </repository>
+    
+    <repository>
+      <id>maven.scm-manager.org</id>
+      <name>scm-manager release repository</name>
+      <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
+    </repository>
   
   </repositories>
   
