--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <artifactId>scm</artifactId>
     <groupId>sonia.scm</groupId>
@@ -80,7 +80,7 @@
                   <platforms>
                     <platform>commons-daemon</platform>
                   </platforms>
-                  
+
                   <jvmSettings>
                     <systemProperties>
                       <arg>java.awt.headless=true</arg>
@@ -167,18 +167,18 @@
 
     <finalName>scm-server</finalName>
   </build>
-  
+
   <profiles>
     <profile>
       <id>nativepkg</id>
-      
+
       <build>
         <plugins>
-          
+
           <plugin>
             <groupId>com.github.sdorra</groupId>
             <artifactId>nativepkg-maven-plugin</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <executions>
               <execution>
                 <goals>
@@ -287,15 +287,15 @@
                     <dirMode>0700</dirMode>
                   </directory>
                 </directories>
-              </mappings>         
+              </mappings>
             </configuration>
           </plugin>
-          
+
         </plugins>
       </build>
     </profile>
   </profiles>
-  
+
   <properties>
     <commons.daemon.version>1.0.15</commons.daemon.version>
     <exploded.directory>${project.build.directory}/appassembler/commons-daemon/scm-server</exploded.directory>
