added display name to web.xml

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -442,6 +442,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.2</version>
         <configuration>
+          <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
           <webResources>
             <resource>
               <directory>${project.build.directory}/dependency-rewrite</directory>
