--- a/scm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/scm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
          metadata-complete="true">
+    
+    <display-name>SCM-Manager ${project.version}</display-name>
 
     <listener>
       <listener-class>sonia.scm.boot.BootstrapListener</listener-class>
