--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -142,9 +142,9 @@
             <link>http://download.oracle.com/javase/6/docs/api/</link>
             <link>http://download.oracle.com/docs/cd/E17802_01/products/products/servlet/2.5/docs/servlet-2_5-mr2/</link>
             <link>http://jersey.java.net/nonav/apidocs/${jersey.version}/jersey/</link>
-            <link>http://google-guice.googlecode.com/svn/tags/3.0/javadoc/</link>
+            <link>http://google-guice.googlecode.com/svn/tags/${guice.version}/javadoc/</link>
             <link>http://www.slf4j.org/api/</link>
-            <link>http://shiro.apache.org/static/current/apidocs/</link>
+            <link>http://shiro.apache.org/static/${shiro.version}/apidocs/</link>
           </links>
         </configuration>
       </plugin>
