added cli sub command to generate unique keys

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -120,3 +120,4 @@ usageVersion = Show the version of scm-cli-client
 usageServerVersion = Show the version of the scm-manager
 
 usageEncrypt = Encrypts the given value
+usageGenerateKey = Generates a unique key
