--- a/scm-maven-plugins/scm-plugin-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/scm-maven-plugins/scm-plugin-archetype/src/main/resources/archetype-resources/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>scm-plugins</artifactId>
     <groupId>sonia.scm.plugins</groupId>
-    <version>1.23</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>${groupId}</groupId>
@@ -42,8 +42,8 @@
       
       <plugin>
         <groupId>sonia.scm.maven</groupId>
-        <artifactId>scm-maven-plugin</artifactId>
-        <version>1.30</version>
+        <artifactId>smp-maven-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <configuration>
           <loggginConfiguration>src/main/conf/logging.xml</loggginConfiguration>
         </configuration>
