--- a/scm-plugin-backend/pom.xml
+++ b/scm-plugin-backend/pom.xml
@@ -137,7 +137,7 @@
       </plugin>
 
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
+        <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
         <configuration>
@@ -146,9 +146,6 @@
           <webApp>
             <contextPath>/scm-plugin-backend</contextPath>
           </webApp>
-          <source>${project.build.javaLevel}</source>
-          <target>${project.build.javaLevel}</target>
-          <encoding>${project.build.sourceEncoding}</encoding>
           <scanIntervalSeconds>0</scanIntervalSeconds>
         </configuration>
       </plugin>
