--- a/scm-annotations/pom.xml
+++ b/scm-annotations/pom.xml
@@ -14,5 +14,16 @@
   <artifactId>scm-annotations</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <name>scm-annotations</name>
+  
+  <dependencies>
+    
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>${guice.version}</version>
+      <optional>true</optional>
+    </dependency>
+    
+  </dependencies>
 
 </project>
