--- a/scm-maven-plugins/scm-plugin-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/scm-maven-plugins/scm-plugin-archetype/src/main/resources/archetype-resources/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>${groupId}</groupId>
   <artifactId>${artifactId}</artifactId>
-  <packaging>jar</packaging>
+  <packaging>smp</packaging>
   <version>${version}</version>
   <name>${dollar}{project.artifactId}</name>
   <description>plugin description</description>
@@ -45,7 +45,7 @@
         <artifactId>smp-maven-plugin</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <configuration>
-          <loggginConfiguration>src/main/conf/logging.xml</loggginConfiguration>
+          <loggingConfiguration>src/main/conf/logging.xml</loggingConfiguration>
         </configuration>
       </plugin>
       
