--- a/support/pom.xml
+++ b/support/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.41-SNAPSHOT</version>
+    <version>1.41</version>
   </parent>
 
   <groupId>sonia.scm.support</groupId>
   <artifactId>scm-support</artifactId>
   <packaging>pom</packaging>
-  <version>1.41-SNAPSHOT</version>
+  <version>1.41</version>
   <name>scm-support</name>
 
   <modules>
