--- a/maven/scm-maven-plugin/pom.xml
+++ b/maven/scm-maven-plugin/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>scm-maven-plugins</artifactId>
     <groupId>sonia.scm.maven</groupId>
-    <version>1.41</version>
+    <version>1.42-SNAPSHOT</version>
   </parent>
   
   <groupId>sonia.scm.maven</groupId>
   <artifactId>scm-maven-plugin</artifactId>
-  <version>1.41</version>
+  <version>1.42-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>scm-maven-plugin</name>
 
