--- a/scm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/scm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,10 @@
     <listener>
       <listener-class>sonia.scm.boot.BootstrapListener</listener-class>
     </listener>
+    
+    <listener>
+      <listener-class>sonia.scm.HttpSessionListenerHolder</listener-class>
+    </listener>
 
     <filter>
         <filter-name>guiceFilter</filter-name>
