--- a/scm-annotation-processor/pom.xml
+++ b/scm-annotation-processor/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>sonia.scm.maven</groupId>
-    <artifactId>scm-maven-plugins</artifactId>
+    <groupId>sonia.scm</groupId>
+    <artifactId>scm</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
   
-  <groupId>sonia.scm.maven</groupId>
+  <groupId>sonia.scm</groupId>
   <artifactId>scm-annotation-processor</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <name>scm-annotation-processor</name>
