--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -20,7 +20,7 @@
     <!-- annotation processor -->
     
     <dependency>
-      <groupId>sonia.scm.maven</groupId>
+      <groupId>sonia.scm</groupId>
       <artifactId>scm-annotation-processor</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <scope>provided</scope>
