added tags to plugin informations

--- a/scm-plugins/scm-git-plugin/src/main/resources/META-INF/scm/plugin.xml
+++ b/scm-plugins/scm-git-plugin/src/main/resources/META-INF/scm/plugin.xml
@@ -47,6 +47,11 @@
   <information>
     <author>Sebastian Sdorra</author>
     <category>Git</category>
+    <tags>
+      <tag>git</tag>
+      <tag>scm</tag>
+      <tag>dvcs</tag>
+    </tags>
   </information>
 
   <conditions>
