--- a/scm-plugins/scm-svn-plugin/src/main/resources/META-INF/scm/plugin.xml
+++ b/scm-plugins/scm-svn-plugin/src/main/resources/META-INF/scm/plugin.xml
@@ -47,6 +47,11 @@
   <information>
     <author>Sebastian Sdorra</author>
     <category>Subversion</category>
+    <tags>
+      <tag>subversion</tag>
+      <tag>scm</tag>
+      <tag>svn</tag>
+    </tags>
   </information>
 
   <conditions>
