--- a/scm-plugins/scm-hg-plugin/src/main/resources/META-INF/scm/plugin.xml
+++ b/scm-plugins/scm-hg-plugin/src/main/resources/META-INF/scm/plugin.xml
@@ -51,6 +51,7 @@
       <tag>mercurial</tag>
       <tag>hg</tag>
       <tag>scm</tag>
+      <tag>vcs</tag>
       <tag>dvcs</tag>
     </tags>
   </information>
