--- a/scm-plugins/scm-svn-plugin/src/main/resources/META-INF/scm/plugin.xml
+++ b/scm-plugins/scm-svn-plugin/src/main/resources/META-INF/scm/plugin.xml
@@ -50,6 +50,7 @@
     <tags>
       <tag>subversion</tag>
       <tag>scm</tag>
+      <tag>vcs</tag>
       <tag>svn</tag>
     </tags>
   </information>
