change name of native packages to avoid conflicts with stable version 1.x

--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -183,6 +183,7 @@
               </execution>
             </executions>
             <configuration>
+              <name>${project.name}-2</name>
               <attach>true</attach>
               <classifier>all</classifier>
               <release>${maven.build.timestamp}</release>
