prepare client api fo import commands

--- a/scm-clients/scm-client-impl/pom.xml
+++ b/scm-clients/scm-client-impl/pom.xml
@@ -45,6 +45,12 @@
       <version>${jersey.version}</version>
     </dependency>
     
+    <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-multipart</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    
     <!-- test scope -->
     
     <dependency>
