implemented import-from-directory cli sub command

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -46,7 +46,7 @@ optionTemplateFile = Template file
 optionRepositoryId = Repository Id
 optionRepositoryIdOrTypeAndName = Repository Id or type/name
 optionRepositoryName = Repository name
-optionRepositoryType = Repository name
+optionRepositoryType = Repository type
 optionRepositoryContact = Repository contact
 optionRepositoryDescription = Repository description
 optionRepositoryPublic = Repository public readable
@@ -81,6 +81,7 @@ permissiontype = value
 groupname = groupname
 repositoryid = repositoryid
 username = username
+repositorytype = type
 
 config = Configuration
 misc = Miscellaneous
@@ -118,6 +119,7 @@ usageModifyRepository = Modify a repository
 usageStoreConfig = Stores the current configuration
 usageVersion = Show the version of scm-cli-client
 usageServerVersion = Show the version of the scm-manager
+usageImportDirectory = Import repositories from repository directory
 
 usageEncrypt = Encrypts the given value
 usageGenerateKey = Generates a unique key
