implement import-from-url cli sub command

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -51,6 +51,7 @@ optionRepositoryContact = Repository contact
 optionRepositoryDescription = Repository description
 optionRepositoryPublic = Repository public readable
 optionRepositoryArchive = Repository archived
+optionRemoteRepositoryUrl = Remote repository url
 
 optionPermissionGroup = Group
 optionPermissionName = Group or user name
@@ -91,6 +92,7 @@ user = User
 security = Security
 level = Logging-Level
 boolean = true or false
+URL = url
 
 options = Options
 usage = scm-cli-client [options] command [command options] 
@@ -120,6 +122,7 @@ usageStoreConfig = Stores the current configuration
 usageVersion = Show the version of scm-cli-client
 usageServerVersion = Show the version of the scm-manager
 usageImportDirectory = Import repositories from repository directory
+usageImportUrl = Import repository from remote url
 
 usageEncrypt = Encrypts the given value
 usageGenerateKey = Generates a unique key
