implement import-from-bundle cli sub command

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -52,6 +52,7 @@ optionRepositoryDescription = Repository description
 optionRepositoryPublic = Repository public readable
 optionRepositoryArchive = Repository archived
 optionRemoteRepositoryUrl = Remote repository url
+optionRepositoryBundle = Import repository from a bundle file (e.g. svn dump)
 
 optionPermissionGroup = Group
 optionPermissionName = Group or user name
@@ -93,6 +94,7 @@ security = Security
 level = Logging-Level
 boolean = true or false
 URL = url
+bundle = file
 
 options = Options
 usage = scm-cli-client [options] command [command options] 
