implement gzip compression for unbundle command

--- a/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
+++ b/scm-clients/scm-cli-client/src/main/resources/sonia/resources/i18n.properties
@@ -53,6 +53,7 @@ optionRepositoryPublic = Repository public readable
 optionRepositoryArchive = Repository archived
 optionRemoteRepositoryUrl = Remote repository url
 optionRepositoryBundle = Import repository from a bundle file (e.g. svn dump)
+optionRepositoryBundleCompressed = Indicates that the bundle is gzip compressed
 
 optionPermissionGroup = Group
 optionPermissionName = Group or user name
