--- a/scm-plugins/scm-hg-plugin/pom.xml
+++ b/scm-plugins/scm-hg-plugin/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.aragost.javahg</groupId>
       <artifactId>javahg</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>0.7-scm1</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
