--- a/scm-plugins/pom.xml
+++ b/scm-plugins/pom.xml
@@ -85,7 +85,7 @@
       <plugin>
         <groupId>sonia.scm.maven</groupId>
         <artifactId>smp-maven-plugin</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-alpha-1</version>
         <extensions>true</extensions>
         <configuration>
           <disableCompression>true</disableCompression>
