--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -353,7 +353,7 @@
       <plugin>
         <groupId>sonia.scm.maven</groupId>
         <artifactId>smp-maven-plugin</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-alpha-1</version>
         <configuration>
           <artifactItems>
             <artifactItem>
